globus-xio-udt-driver (1.5-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-xio-udt-driver (1.4-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-xio-udt-driver (1.4-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 05 Mar 2014 15:33:37 -0500

globus-xio-udt-driver (0.9-1) unstable; urgency=low

  * Update build to check for bind2 in udt 4.11
  * Handle udt.h in /usr/include or /usr/include/udt
  * Update internal dependency build script to work with the official release

 -- Globus Toolkit <support@globus.org>  Tue, 26 Nov 2013 20:33:28 -0600

globus-xio-udt-driver (0.8-1) unstable; urgency=low

  * GT-486: Perform udt driver connection using the socket negotiated by ice instead of binding to the negotiated source addr.
  * cleanup

 -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2013 14:16:07 -0600

globus-xio-udt-driver (0.7-1) unstable; urgency=low

  * GT-481: avoid UDT driver blocking on accept, resulting in hung process if connection never comes.

 -- Globus Toolkit <support@globus.org>  Wed, 06 Nov 2013 16:40:10 -0600

globus-xio-udt-driver (0.6-3) unstable; urgency=low

  * attempt to fix libglib2.0-0 dependency

 -- Globus Toolkit <support@globus.org>  Tue, 29 October 2013 09:35:27 -0400

globus-xio-udt-driver (0.6-2) unstable; urgency=low

  * more new package fixes

 -- Globus Toolkit <support@globus.org>  Wed, 16 Oct 2013 21:33:32 -0500

globus-xio-udt-driver (0.6-1) unstable; urgency=low

  * more new package fixes

 -- Globus Toolkit <support@globus.org>  Wed, 16 Oct 2013 21:01:43 -0500

globus-xio-udt-driver (0.5-1) unstable; urgency=low

  * fix new package issues

 -- Globus Toolkit <support@globus.org>  Wed, 16 Oct 2013 16:44:22 -0500
